feat:card design completed

--- a/src/app/core/component/master/master.component.html
+++ b/src/app/core/component/master/master.component.html
@@ -1,4 +1,8 @@
-<div class="">
-  <div><app-header></app-header></div>
-  <div><router-outlet></router-outlet></div>
+<div class="h-100 ">
+  <div class="border border-danger">
+    <app-header></app-header>
+  </div>
+  <div class="d-flex flex-grow-1">
+    <router-outlet></router-outlet>
+  </div>
 </div>
