--- a/src/assets/scss/base/_variable.scss
+++ b/src/assets/scss/base/_variable.scss
@@ -48,3 +48,9 @@ $profile-image-Border-radius:50px;
 $header-logo-image-width:150px;
 $header-logo-image-width-lg:100px;
 
+// main
+$main-bg-gradient:linear-gradient(180deg, #F9F7F7 0%, rgba(249, 247, 247, 0) 100%);
+
+// card 
+$card-wrapper-image-width:250px;
+$card-wrapper-image-height:200px;
