ccard Responsive completed

--- a/src/app/core/component/master/master.component.html
+++ b/src/app/core/component/master/master.component.html
@@ -1,8 +1,8 @@
-<div class="h-100 ">
-  <div class="border border-danger">
+<div class="d-flex flex-column h-100 ">
+  <div>
     <app-header></app-header>
   </div>
-  <div class="d-flex flex-grow-1">
+  <div class="flex-grow-1 overflow-auto">
     <router-outlet></router-outlet>
   </div>
 </div>
