--- a/src/app/home-container/home-presentation/home-presentation.component.html
+++ b/src/app/home-container/home-presentation/home-presentation.component.html
@@ -1,4 +1,5 @@
 <main class="h-100 d-flex flex-column">
+    <!-- Carousel Container -->
     <div class="container">
         <div class="row gx-0">
             <!-- Carousel starts here -->
@@ -85,168 +86,37 @@
             <!-- End of carousel -->
         </div>
     </div>
+    <!-- end  Carousel Container -->
     <!-- studio -->
-    <div class="studio-wrapper mt-5 flex-grow-1">
+    <div class="studio-wrapper mt-5">
         <!-- container -->
         <div class="container h-100 d-flex flex-column">
             <!-- header section -->
-            <div class="d-flex justify-content-between align-items-center pt-5">
+            <div class="d-flex justify-content-between align-items-center pt-4">
                 <h3 class="fw-bold">Explore Studios</h3>
                 <a href="#" class="text-primary fw-bold">SEE ALL</a>
             </div>
             <!-- card main wrapper -->
-            <div class="card-main-wrapper mt-4 flex-grow-1">
-                <div class="row h-100 overflow-auto">
-                    <!-- card 1 -->
-                    <div class="col-12 col-sm-6 col-md-4 col-lg-2 mt-3">
-                        <!-- card-wrapper -->
-                        <div class="card-wrapper bg-primary p-3 bg-white rounded border border-secondary  ">
-                            <!-- card -->
-                            <div class="card overflow-hidden">
-                                <!-- card image -->
-                                <div class="card-image overflow-hidden">
-                                    <img src="./../../../assets/images/Studio-1.svg" class="w-100 h-auto">
-                                </div>
-                                <!-- card text -->
-                                <div class="card-text my-2">
-                                    <h6>Magical Studio</h6>
-                                    <span class="text-secondary-gray">2097 Westheimer Rd. Santa ana, 0225052</span>
-                                </div>
-                                <!-- button -->
-                                <div class="button">
-                                    <button type="button" class="btn btn-outline-secondary fw-lighter w-100">View
-                                        Details</button>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                       <!-- end card 1 -->
-                        <!-- card 2 -->
-                    <div class="col-12 col-sm-6 col-md-4 col-lg-2 mt-3">
-                        <!-- card-wrapper -->
-                        <div class="card-wrapper bg-primary p-3 bg-white rounded border border-secondary ">
-                            <!-- card -->
-                            <div class="card overflow-hidden">
-                                <!-- card image -->
-                                <div class="card-image overflow-hidden">
-                                    <img src="./../../../assets/images/Studio-2.svg" class="w-100 h-auto">
-                                </div>
-                                <!-- card text -->
-                                <div class="card-text my-2">
-                                    <h6>Magical Studio</h6>
-                                    <span class="text-secondary-gray">2097 Westheimer Rd. Santa ana, 0225052</span>
-                                </div>
-                                <!-- button -->
-                                <div class="button">
-                                    <button type="button" class="btn btn-outline-secondary fw-lighter w-100">View
-                                        Details</button>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                       <!-- end card 2 -->
-                        <!-- card 3 -->
-                    <div class="col-12  col-sm-6 col-md-4 col-lg-2 mt-3">
-                        <!-- card-wrapper -->
-                        <div class="card-wrapper bg-primary p-3 bg-white rounded border border-secondary ">
-                            <!-- card -->
-                            <div class="card  overflow-hidden">
-                                <!-- card image -->
-                                <div class="card-image overflow-hidden">
-                                    <img src="./../../../assets/images/Studio-3.svg" class="w-100 h-auto">
-                                </div>
-                                <!-- card text -->
-                                <div class="card-text my-2">
-                                    <h6>Magical Studio</h6>
-                                    <span class="text-secondary-gray">2097 Westheimer Rd. Santa ana, 0225052</span>
-                                </div>
-                                <!-- button -->
-                                <div class="button">
-                                    <button type="button" class="btn btn-outline-secondary fw-lighter w-100">View
-                                        Details</button>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                       <!-- end card 3 -->
-                        <!-- card 4 -->
-                    <div class="col-12 col-sm-6 col-md-4 col-lg-2 mt-3">
-                        <!-- card-wrapper -->
-                        <div class="card-wrapper bg-primary p-3 bg-white rounded border border-secondary ">
-                            <!-- card -->
-                            <div class="card overflow-hidden">
-                                <!-- card image -->
-                                <div class="card-image overflow-hidden">
-                                    <img src="./../../../assets/images/Studio-4.svg" class="w-100 h-auto">
-                                </div>
-                                <!-- card text -->
-                                <div class="card-text my-2">
-                                    <h6>Magical Studio</h6>
-                                    <span class="text-secondary-gray">2097 Westheimer Rd. Santa ana, 0225052</span>
-                                </div>
-                                <!-- button -->
-                                <div class="button">
-                                    <button type="button" class="btn btn-outline-secondary fw-lighter w-100">View
-                                        Details</button>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                       <!-- end card 4 -->
-                        <!-- card 5 -->
-                    <div class="col-12 col-sm-6 col-md-4 col-lg-2 mt-3">
-                        <!-- card-wrapper -->
-                        <div class="card-wrapper bg-primary p-3 bg-white rounded border border-secondary ">
-                            <!-- card -->
-                            <div class="card overflow-hidden">
-                                <!-- card image -->
-                                <div class="card-image overflow-hidden">
-                                    <img src="./../../../assets/images/Studio-5.svg" class="w-100 h-auto">
-                                </div>
-                                <!-- card text -->
-                                <div class="card-text my-2">
-                                    <h6>Magical Studio</h6>
-                                    <span class="text-secondary-gray">2097 Westheimer Rd. Santa ana, 0225052</span>
-                                </div>
-                                <!-- button -->
-                                <div class="button">
-                                    <button type="button" class="btn btn-outline-secondary fw-lighter w-100">View
-                                        Details</button>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                       <!-- end card 5 -->
-                        <!-- card 6 -->
-                    <div class="col-12 col-sm-6 col-md-4 col-lg-2 mt-3">
-                        <!-- card-wrapper -->
-                        <div class="card-wrapper bg-primary p-3 bg-white rounded border border-secondary ">
-                            <!-- card -->
-                            <div class="card overflow-hidden">
-                                <!-- card image -->
-                                <div class="card-image overflow-hidden">
-                                    <img src="./../../../assets/images/Studio-2.svg" class="w-100 h-auto">
-                                </div>
-                                <!-- card text -->
-                                <div class="card-text my-2">
-                                    <h6>Magical Studio</h6>
-                                    <span class="text-secondary-gray">2097 Westheimer Rd. Santa ana, 0225052</span>
-                                </div>
-                                <!-- button -->
-                                <div class="button">
-                                    <button type="button" class="btn btn-outline-secondary fw-lighter w-100">View
-                                        Details</button>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                       <!-- end card 6 -->
-                </div>
+            <div class="card-main-wrapper my-2">
+                <app-card></app-card>
             </div>
         </div>
     </div>
-    <!-- Artist -->
-    <div>
-        
+    <!-- end -->
+    <!-- artrist -->
+    <div class="artist-wrapper mt-5">
+        <!-- container -->
+        <div class="container h-100 d-flex flex-column">
+            <!-- header section -->
+            <div class="d-flex justify-content-between align-items-center pt-4">
+                <h3 class="fw-bold">Explore Artist</h3>
+                <a href="#" class="text-primary fw-bold">SEE ALL</a>
+            </div>
+            <!-- card main wrapper -->
+            <div class="card-main-wrapper my-3">
+                <app-card></app-card>
+            </div>
+        </div>
     </div>
+    <!--End artrist -->
 </main>
