--- a/src/app/shared/card/card.component.html
+++ b/src/app/shared/card/card.component.html
@@ -1,1 +1,25 @@
-<p>card works!</p>
+<div class="row h-100 ">
+    <!-- card 1 -->
+    <div class="col-12 col-sm-6 col-md-4 col-lg-2 mt-3">
+        <!-- card-wrapper -->
+        <div class="card-wrapper bg-primary p-3 bg-white rounded border border-secondary  ">
+            <!-- card -->
+            <div class="card overflow-hidden">
+                <!-- card image -->
+                <div class="card-image overflow-hidden">
+                    <img src="./../../../assets/images/Studio-1.svg" class="w-100 h-auto">
+                </div>
+                <!-- card text -->
+                <div class="card-text my-2">
+                    <h6>Magical Studio</h6>
+                    <span class="text-secondary-gray">2097 Westheimer Rd. Santa ana, 0225052</span>
+                </div>
+                <!-- button -->
+                <div class="button">
+                    <button type="button" class="btn btn-outline-secondary fw-lighter w-100">View
+                        Details</button>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
